# djazbahana

./: .flake8  .gitignore  .pre-commit-config.yaml  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
api/: serializers.py  urls.py  views.py
base/: admin.py  forms.py  models.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_classroom_topic_message_classroom_topic.py  0003_alter_message_body.py  0004_alter_message_body.py  0005_message_conspect.py  0006_alter_message_conspect_alter_user_avatar.py  0007_rename_user_message_author_conspect.py  0008_alter_conspect_options_remove_conspect_title_and_more.py  0009_remove_message_conspect_alter_classroom_description_and_more.py  0010_alter_user_bio.py  0011_alter_user_email.py  0012_user_balance.py  0013_conspect_description.py  0014_alter_classroom_description_alter_classroom_name_and_more.py
base/templates/base/: about.html  activities.html  activity.html  balance.html  classroom.html  classroom_form.html  classroom_message.html  confirm.html  conspect_form.html  delete.html  donate.html  (+6 more)
base/templatetags/: base_extras.py
jazbahana/: asgi.py  settings.py  urls.py  wsgi.py
jazbahana/settings/: base.py  dev.py  prod.py
static/js/: script.js
static/markdown/: about.md  donate.md
static/styles/: about.css  activities.css  activity.css  classroom.css  confirm.css  delete.css  donate.css  footer.css  login_register.css  markdown_page.css  navbar.css  pagination.css  profile.css  style.css  topics.css  trash.css  update_user.css
templates/: base.html  footer.html  navbar.html
(+9 files in other folders)
