[tool.poetry]
name = "jazbahana"
version = "1.0.0"
description = "A social media-like studying platform."
authors = ["Dastan Ozgeldi <ozgdastan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
Pillow = "^9.1.0"
Markdown = "^3.3.7"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
